libycp/testsuite/tests/values/Constants.err
Parsed:
----------------------------------------------------------------------
nil
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
true
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
false
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
0
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
1
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
1234567890
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
1.
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
3.14159
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
0.123
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
1.23e+10
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
1.23e-10
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
""
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
"abcd"
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
"a\n\tb"
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
"a\bb"
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
"a\nz"
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
"A\n0\nz\n9\n"
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
"a\n\t\r\b\fb"
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
"\"\n"
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
#[202122232425262728296A6B00]
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
#[202122232425262728296A6B00]
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
.
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
.a
----------------------------------------------------------------------
Parsed:
----------------------------------------------------------------------
.a.b.cde.fgh
----------------------------------------------------------------------
tests/values/Constants.ycp:49:syntax error, unexpected C_INTEGER
[Parser] tests/values/Constants.ycp:49 syntax error, unexpected C_INTEGER
runycp: parser error
